tried to keep most text and all code to 80 characters

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -44,10 +44,12 @@ By the end of the chapter, readers will be able to:
 
 ## Data frames and vectors
 
-We now know how to load data into R from various file formats. Given that most
-of the tools we have used to import data represent the data as a *data frame* in R, we
-will spend some time learning more about data frames to deepen our understanding
-of them. This will be useful prerequisite knowledge to use
+We now know how to load data into R from various file formats. 
+Given that most of the tools we have used to import data represent the data 
+as a *data frame* in R, 
+we will spend some time learning more about data frames 
+to deepen our understanding of them. 
+This will be useful prerequisite knowledge to use
 and manipulate these objects in our data analysis.
 
 ### What is a data frame?
@@ -82,8 +84,9 @@ knitr::include_graphics("img/obs_and_var/obs_and_var.001.jpeg")
 ```
 
 From a computer programming perspective, in R, a data frame is a special type of
-object whose columns are *vectors*. For example, the data
-frame in Figure \@ref(fig:02-vectors) has three vectors whose names are `region`,
+object whose columns are *vectors*. 
+For example, the data frame in Figure \@ref(fig:02-vectors) 
+has three vectors whose names are `region`,
 `year` and `population`. We will explain what vectors are in the next section.
 
 ``` {r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with three vectors", fig.retina = 2, out.width = "700"}
@@ -151,21 +154,27 @@ knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
 
 ### What does this have to do with data frames?
 
-As mentioned earlier, a data frame is a special type of object in R whose columns are vectors. 
-In particular, a data frame is really a special subtype of list where the elements 
+As mentioned earlier, 
+a data frame is a special type of object in R whose columns are vectors. 
+In particular, 
+a data frame is really a special subtype of list where the elements 
 can only be vectors, and the vectors must be of the same length. 
 Although the columns of a data frame can only be vectors, 
-and vector elements must be of the same data type, not all columns in a data frame 
-need to be of the same type. Figure \@ref(fig:02-dataframe) shows a data frame where
-the columns are vectors of different types, but the elements are the same data type
-within each column. Representing data with data frames enables us to work with our 
-data in a tabular manner easily. It also allows us to have columns (containing
-qualities or values) for different variables linked in a row for one observation,
-and these columns can't be sorted independently. For example, suppose you had a
-data frame where the rows were students and the columns were students' grades.
-If you sorted students by their name alphabetically, you would want the grades 
-associated with each student to get sorted along with each name rather than sorting
-the columns independently. 
+and vector elements must be of the same data type, 
+not all columns in a data frame need to be of the same type. 
+Figure \@ref(fig:02-dataframe) shows a data frame where
+the columns are vectors of different types, 
+but the elements are the same data type within each column. 
+Representing data with data frames enables us to work with our 
+data in a tabular manner easily. 
+It also allows us to have columns (containing qualities or values) 
+for different variables linked in a row for one observation,
+and these columns can't be sorted independently. 
+For example, suppose you had a data frame where the rows were students 
+and the columns were students' grades.
+If you sorted students by their name alphabetically, 
+you would want the grades associated with each student to get sorted 
+along with each name rather than sorting the columns independently. 
 
 ``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "650"}
 knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
@@ -248,8 +257,9 @@ below!
 One task that is commonly performed to get data into a tidy format 
 is to combine values that are stored in separate columns, 
 but are really part of the same variable, into one.
-Data is often stored this way because this format is sometimes more intuitive for
-human readability and understanding, and humans create data sets.
+Data is often stored this way 
+because this format is sometimes more intuitive for human readability 
+and understanding, and humans create data sets.
 In Figure \@ref(fig:02-wide-to-long), 
 the table on the left is in an untidy, "wide" format because the year values 
 (2006, 2011, 2016) are stored as column names. 
@@ -279,7 +289,8 @@ population size? Land area? It's not clear.
 To solve both of these problems, 
 we can reshape this data set to a tidy data format 
 by creating a column called "year" and a column called
-"population," which is the table on the right of Figure \@ref(fig:02-wide-to-long).
+"population," which is the table on the right of 
+Figure \@ref(fig:02-wide-to-long).
 Note that this transformation makes the data "longer".
 
 ``` {r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long data", fig.retina = 2, out.width = "1150"}
@@ -307,8 +318,9 @@ lang_wide
 ```
 
 
-What is wrong with our untidy format above? The table on the left in Figure
-\@ref(fig:img-pivot-longer-with-table) represents the data in the "wide" (messy) format.
+What is wrong with our untidy format above? 
+The table on the left in Figure \@ref(fig:img-pivot-longer-with-table) 
+represents the data in the "wide" (messy) format.
 From a data analysis perspective, this format is not ideal because the values of 
 the variable *region* (Toronto, Montréal, Vancouver, Calgary and Edmonton) 
 are stored as column names. Thus they
@@ -318,11 +330,14 @@ spread across multiple columns, which will prevent us from doing any desired
 visualization or statistical tasks until we combine them into one column. For
 instance, suppose we want to know the languages with the highest number of 
 Canadians reporting it as their mother tongue among all five regions. This
-question would be tough to answer with the data in its current format. We *could* 
-find the answer with the data in this format, though it would be much easier to answer if we tidy our
-data first. If mother tongue were instead stored as one column, as shown in the tidy
-data on the right in Figure \@ref(fig:img-pivot-longer-with-table),
-we could simply use one line of code (`max(mother_tongue)`) to get the maximum value. 
+question would be tough to answer with the data in its current format. 
+We *could*find the answer with the data in this format, 
+though it would be much easier to answer if we tidy our
+data first. If mother tongue were instead stored as one column, 
+as shown in the tidy data on the right in 
+Figure \@ref(fig:img-pivot-longer-with-table),
+we could simply use one line of code (`max(mother_tongue)`) 
+to get the maximum value. 
 
 ``` {r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot_longer function", out.width="1100", fig.retina = 2}
 knitr::include_graphics("img/pivot_functions/pivot_functions.003.jpeg")
@@ -399,7 +414,9 @@ knitr::include_graphics("img/pivot_functions/pivot_functions.002.jpeg")
 To tidy this type of data in R, we can use the function `pivot_wider`,
 which generally increases the number of columns (widens) 
 and decreases the number of rows in a data set. 
-To learn how to use `pivot_wider`, we will work through an example with the `region_lang_top5_cities_long.csv` data set. 
+To learn how to use `pivot_wider`, 
+we will work through an example 
+with the `region_lang_top5_cities_long.csv` data set. 
 This data set contains the number of Canadians reporting 
 the primary language at home and work for five
 major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton).
@@ -534,10 +551,11 @@ messy data set. R read these columns in as character types, and by default,
 It makes sense for `region`, `category`, and `language` to be stored as a
 character type. However, suppose we want to apply any functions that treat the
 `most_at_home` and `most_at_work` columns as a number (e.g. finding rows 
-above a numeric threshold of a column). In that case, it won't be possible to do if the
-variable is stored as a `character`. We can set `convert = TRUE` to convert the
-`most_at_home` and `most_at_work` columns to the correct data type.
-
+above a numeric threshold of a column). 
+In that case, 
+it won't be possible to do if the variable is stored as a `character`. 
+We can set `convert = TRUE` to convert the `most_at_home` 
+and `most_at_work` columns to the correct data type.
 
 ``` {r}
 tidy_lang <- separate(lang_messy_longer,
@@ -553,7 +571,6 @@ Now we see `<int>` appears under our columns, `most_at_home` and `most_at_work`,
 indicating they are integer data types (which is one of the sub-types of
 numeric)!
 
-
 ### Notes on defining tidy data
 
 Is there only one shape for tidy data for a given data set? Not necessarily! It
@@ -566,11 +583,11 @@ ensure they are represented as individual columns to make the data tidy.
 
 ## Using `select` to extract a range of columns
 
-Chapter \@ref(intro) discussed two `tidyverse` functions: `select` and `filter` to select
-columns and filter rows from a data frame. We will now learn more ways we can
-use these functions. Recall, the `select` function creates a subset of the
-*columns* of a data frame, while the `filter` subsets *rows* with specific
-values.
+Chapter \@ref(intro) discussed two `tidyverse` functions: 
+`select` and `filter` to select columns and filter rows from a data frame. 
+We will now learn more ways we can use these functions. 
+Recall, the `select` function creates a subset of the *columns* of a data frame, 
+while the `filter` subsets *rows* with specific values.
 
 ### Using `select` helpers to extract columns
 
@@ -598,9 +615,9 @@ column_range <- select(tidy_lang, language:most_at_work)
 column_range
 ```
 
-Notice that we get the same output as we did above, but with less typing, and thus,
-we are less error-prone! This type of operator is handy, especially for large
-data sets.
+Notice that we get the same output as we did above, 
+but with less typing, and thus, we are less error-prone! 
+This type of operator is handy, especially for large data sets.
 
 Suppose instead we wanted to extract columns that followed a particular pattern
 rather than just selecting a range. Let's say we wanted only to select the
@@ -621,8 +638,9 @@ select(tidy_lang, contains("_"))
 ```
 
 There are many different `select` helpers, which are very handy for selecting
-variables based on certain criteria. Check out the Additional
-Resources section at the end of the chapter for a comprehensive resource on `select` helpers.
+variables based on certain criteria. 
+Check out the Additional Resources section at the end of the chapter 
+for a comprehensive resource on `select` helpers.
 
 ## Using `filter` to extract rows
 
@@ -675,7 +693,8 @@ to find rows that satisfy multiple conditions simultaneously.
 We can do this with `,`, which in the case of `filter`, 
 is interpreted by R as "and". 
 We write the code as shown below to filter the `official_langs` data frame 
-to subset the rows where `region == "Montréal"` *and* the `language == "French"`.
+to subset the rows where `region == "Montréal"` 
+*and* the `language == "French"`.
 
 ``` {r}
 filter(official_langs, region == "Montréal", language == "French")
@@ -839,7 +858,8 @@ Now we could apply numeric functions to them to do useful things.
 
 ``` {r , include = FALSE}
 census_popn <- 35151728
-number_most_home <- filter(official_langs, language == "English" & region == "Toronto") |>
+number_most_home <- filter(official_langs, 
+                           language == "English" & region == "Toronto") |>
 pull(most_at_home)
 
 toronto_popn <- region_data |> filter(region == "Toronto") |>
@@ -853,14 +873,16 @@ the 2016 Canadian census. What does this number mean to us? To understand this
 number, we need context. In particular, how many people were in Toronto when
 this data was collected? From the 2016 Canadian census profile, the population
 of Toronto was reported to be
-`r format(toronto_popn, scientific = FALSE, big.mark = ",")` people. The number
-of people who report that English was their primary language at home is much more
-meaningful when we report it in this context. We can even go a step further and
-transform this count to a relative frequency or proportion. We can do this by
-dividing the number of people reporting a given language as their primary
-language at home by the number of people who live in Toronto. For example, the
-proportion of people who reported that their primary language at home was
-English in the 2016 Canadian census was
+`r format(toronto_popn, scientific = FALSE, big.mark = ",")` people. 
+The number of people who report that English was their primary language at home 
+is much more meaningful when we report it in this context. 
+We can even go a step further and transform this count to a relative frequency 
+or proportion.
+We can do this by dividing the number of people reporting a given language 
+as their primary language at home by the number of people who live in Toronto. 
+For example, 
+the proportion of people who reported that their primary language at home 
+was English in the 2016 Canadian census was
 `r format(round(number_most_home/toronto_popn, 2), scientific = FALSE, big.mark = ",")`
 in Toronto.
 
@@ -879,8 +901,8 @@ To create a vector containing the population values for our cities
 we will use the `c` function:
 
 ```{r}
-city_populations <- c(5928040, 4098927, 2463431, 1392609, 1321426)
-city_populations
+city_pops <- c(5928040, 4098927, 2463431, 1392609, 1321426)
+city_pops
 ```
 
 And next, we will filter the `official_langs` data frame 
@@ -900,17 +922,17 @@ We will compute this by dividing the column by our vector of city populations.
 
 ```{r, include = TRUE}
 english_langs <- mutate(english_langs, 
-                         most_at_home_proportion = most_at_home / city_populations )
+                         most_at_home_proportion = most_at_home / city_pops)
 
 english_langs
 ```
 
 > Note: one important thing about the computation that we did above was
-that we had to ensure that we ordered the `city_populations` vector in the
+that we had to ensure that we ordered the `city_pops` vector in the
 same order as the cities were listed in the `english_langs` dataframe.
 This is because R will perform the division computation we did by dividing 
 each element of the `most_at_home` column by each element of the 
-`city_populations` vector - matching them up by position.
+`city_pops` vector - matching them up by position.
 Failing to do this would have resulted in the incorrect math to be performed.
 In more advanced data wrangling, 
 one might solve this problem in a less error-prone way though using 
@@ -938,7 +960,7 @@ ggplot(
   )
 ) +
   geom_bar(stat = "identity") +
-  xlab("English reported as the primary language spoken most often at home (proportion)") +
+  xlab("Proportion reporting they speak English most often at home") +
   ylab("Region")
 ```
 
@@ -946,7 +968,8 @@ ggplot(
 > detail about visualizations in Chapter \@ref(viz).
 
 From this visualization, we can see that in Calgary, Edmonton, Toronto and
-Vancouver, English was reported as the most common primary language used at home.
+Vancouver, 
+English was reported as the most common primary language used at home.
 However, in Montréal, this does not seem to be the case!
 
 ## Combining functions using the pipe operator, `|>`
@@ -978,7 +1001,9 @@ each subsequent line.
 Another option for doing this would be to *compose* the functions:
 
 ``` {r eval = F}
-output <- select(filter(mutate(data, new_col = old_col * 2), other_col > 5), new_col)
+output <- select(filter(mutate(data, new_col = old_col * 2), 
+                        other_col > 5), 
+                 new_col)
 ```
 
 Code like this can also be difficult to understand. Functions compose (reading
@@ -1010,7 +1035,8 @@ again is used to aid in improving code readability.
 Next, let's learn about the details of using the pipe, and look at some examples
 of how to use it in data analysis.
 
-> Note: In this textbook, we will be using the base R pipe operator syntax, `|>`.
+> **Note:** 
+> In this textbook, we will be using the base R pipe operator syntax, `|>`.
 > This base R `|>` pipe operator was inspired by a previous version of the pipe
 > operator, `%>%`. The `%>%` pipe operator is not built into R 
 > and is from the `magrittr` R package.
@@ -1026,9 +1052,10 @@ of how to use it in data analysis.
 
 ### Using `|>` to combine `filter` and `select`
 
-Let's work with our tidy `tidy_lang` data set from section \@ref(separate), which contains
-the number of Canadians reporting their primary language at home and work for
-five major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton):
+Let's work with our tidy `tidy_lang` data set from section \@ref(separate), 
+which contains the number of Canadians reporting their primary language at home 
+and work for five major cities 
+(Toronto, Montréal, Vancouver, Calgary and Edmonton):
 
 ``` {r, warning=FALSE, message=FALSE}
 tidy_lang
@@ -1062,30 +1089,36 @@ van_data_selected <- filter(tidy_lang, region == "Vancouver") |>
 van_data_selected
 ```
 
-But wait - why does our `select` function call look different in these two
-examples? When you use the pipe, the output of the first function is
-automatically provided as the first argument for the function that comes after it, and
-thus you do not specify that argument in that function call. In the code above,
-the first argument of `select` is the data frame we are `select`-ing from, which
-is provided by the output of `filter`.
+But wait - 
+why does our `select` function call look different in these two examples? 
+When you use the pipe, 
+the output of the first function is automatically provided 
+as the first argument for the function that comes after it, 
+and thus you do not specify that argument in that function call. 
+In the code above,
+the first argument of `select` is the data frame we are `select`-ing from, 
+which is provided by the output of `filter`.
 
 As you can see, both of these approaches give us the same output, but the second
 approach is more clear and readable.
 
 ### Using `|>` with more than two functions
 
-The pipe operator (|>) can be used with any function in R. Additionally, we can pipe together
-more than two functions. For example, we can pipe together three functions to: 
+The pipe operator (|>) can be used with any function in R. 
+Additionally, we can pipe together more than two functions. 
+For example, we can pipe together three functions to: 
 
 - `filter` rows to include only those where the counts of the language most spoken at home are greater than 10,000, 
 - `select` only the columns corresponding to `region`, `language` and `most_at_home`, and
 - `arrange` the dataframe rows in order by counts of the language most spoken at home 
 from smallest to largest.
 
-> **Note:** As we saw in Chapter \@ref(intro), we can use the `tidyverse` `arrange` function 
+> **Note:** 
+> As we saw in Chapter \@ref(intro), 
+> we can use the `tidyverse` `arrange` function 
 > to order the rows in the dataframe by the values of one or more columns. 
-> Here we pass the column name `most_at_home` to arrange to order the dataframe rows 
-> by the values in that column, in ascending order.
+> Here we pass the column name `most_at_home` to arrange 
+> to order the dataframe rows by the values in that column, in ascending order.
 
 ``` {r}
 large_region_lang <- filter(tidy_lang, most_at_home > 10000) |>
@@ -1115,8 +1148,9 @@ large_region_lang
 
 Now that we've shown you the pipe operator as an alternative to storing
 temporary objects and composing code, does this mean you should *never* store 
-temporary objects or compose code? Not necessarily! There are times when you will 
-still want to do these things. For example, you might store temporary objects 
+temporary objects or compose code? Not necessarily! 
+There are times when you will still want to do these things. 
+For example, you might store temporary objects 
 because you want to save prepared data before feeding it into a plot function 
 so you can iteratively change the plot without having to
 redo all of your data transformations each time you create a new plot.
@@ -1223,7 +1257,7 @@ summarize(region_lang_na,
           max_most_at_home = max(most_at_home, na.rm = TRUE))
 ```
 
-### Calculating summary statistics on a column from groups of rows:
+### Calculating summary statistics on columns for groups of rows:
 
 A common pairing with `summarize` is `group_by`. Pairing these functions
 together can let you summarize values for subgroups within a data set,
@@ -1392,7 +1426,8 @@ output; you don't always have to pick `map_dfc`!
 > contain NAs in the data frame.
 > 
 > To avoid this, again we need to add the argument `na.rm = TRUE`.
-> When we use this with `map` we do this by adding a `,` and then `na.rm = TRUE`,
+> When we use this with `map` we do this by adding a `,` 
+> and then `na.rm = TRUE`, 
 > after specifying the function we want `map` to apply, as illustrated below:
 > 
 > ``` {r}
@@ -1508,8 +1543,9 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
     meta package*: it installs and loads a collection of R packages that all
     follow the tidy data philosophy we discussed above. One of the `tidyverse`
     packages is `dplyr` - a data wrangling workhorse. You have already met many
-    of `dplyr`'s functions (`select`, `filter`, `mutate`, `arrange`, `summarize`,
-    and `group_by`). To learn more about these functions and meet a few more useful
+    of `dplyr`'s functions 
+    (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). 
+    To learn more about these functions and meet a few more useful
     functions, we recommend you checkout [this
     chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we)
     of the Data wrangling, exploration, and analysis with R book.
